# PubQuizStats

./: .env.example  ARCHITECTURE.md  CHECKLIST.md  DESIGN_DECISIONS.md  FILE_LISTING.md  IMPLEMENTATION.md  README.md  SUMMARY.md  main.py  pyproject.toml  quickstart.sh  reimport_all.sh
data/: quiz_results.db  quiz_results_test.db
data/quizzes/: 20260204_Casino.xlsx  20260211_Josef.xlsx  20260304_Casino.xlsx  20260324_GloriousBastards.xlsx  20260331_Josef.xlsx  20260408_Casino.xlsx  20260416_Josef.xlsx
data/tmp/: 20260304_Casino.xlsx
src/: championship_config.py  db_report.py  import_quiz_results.py  round_config.py  team_aliases.py
src/pubquizstats/: __init__.py  cli.py  config.py
src/pubquizstats/analytics/: __init__.py  analyzer.py
src/pubquizstats/database/: __init__.py  connection.py
src/pubquizstats/database/repositories/: __init__.py  analytics_repository.py  base_repository.py  quiz_repository.py  team_repository.py
src/pubquizstats/loaders/: __init__.py  excel_loader.py
src/pubquizstats/models/: __init__.py  database.py  schemas.py
src/pubquizstats/processing/: __init__.py  deduplicator.py  importer.py
tests/: test_analytics.py  test_deduplicator.py  test_excel_loader.py
tests/fixtures/: create_sample.py
