[project]
name = "pubquizstats"
version = "0.1.0"
description = "Analyze pub quiz results from Excel files, manage teams, and generate statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "openpyxl>=3.11",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.1",
    "click>=8.1",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.scripts]
pubquizstats = "pubquizstats.cli:cli"
